--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 </head>
 <body>
     <div class="background">
+        <setion class="heading">
         <div>
             <img class="img5" src="images/img5.jpg">
         </div>
@@ -28,6 +29,7 @@
                 </div>
                 <a href="https://twitter.com/Kur0NekoCoin"><img class="twitter" src="images/twitter.svg"></a> 
             </div>
+        </setion>
         </div>
         <div>
             <img class="img1" src="images/img1.jpg">
@@ -230,8 +232,10 @@
                     <a href="https://twitter.com/Kur0NekoCoin"><img class="twitter" src="images/twitter.svg"></a> 
                 </div>
             </div> 
-            <div class="support">
+            <div class="support-p">
                 <p>Supported by:</p>
+            </div>
+            <div class="support">
                 <div class="firstrow">
                     <div class="bsc">
                         <img class="bscpic" src="images/bsc.png">
@@ -254,10 +258,10 @@
                         <img class="blazepic" src="images/blazex.webp">
                     </div>
                 </div>
-                <div class="copyright">
-                    <h2>Copyright &copy; 2023 KURONEKO - $JIJI. All right reserved
-                    </h2>
-                </div> 
+            </div> 
+            <div class="copyright">
+                <p>Copyright &copy; 2023 KURONEKO - $JIJI. All right reserved
+                </p>
             </div> 
             </div> 
         </div>  
