--- a/index.html
+++ b/index.html
@@ -127,6 +127,9 @@
                 <p class="road">ROADMAP</p>
                 <div class="road1">
                     <div class="q1cat">
+                        <div class="quarter1">
+                            <p>Q1</p>
+                        </div>
                     <img class="cat1" src="images/catup.svg">
                     </div>
                     <div class="q1note">
@@ -171,12 +174,18 @@
                             </li>
                        </ul> 
                     </div>
-                    <div>
+                    <div class="catsquat-div">
+                        <div class="quarter2">
+                            <p>Q2</p>
+                        </div>
                         <img class="catsquat" src="images/catsquat.svg">
                     </div>
                 </div>
                 <div class="road3">
-                    <div>
+                    <div class="catface-div">
+                        <div class="quarter3">
+                            <p>Q3</p>
+                        </div>
                         <img class="catface" src="images/catface.svg">
                     </div>
                     <div class="q3note">
