--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
             <div class="description-container"><p class="description">$JIJI The Token Of The New Era</p></div>
             <div class="media">
                 <div class="tg-container">
-                    <a href="https://t.me/kuroneko1000xxx"><img class="tg" src="images/tg.svg"></a>
+                    <a href="https://t.me/JIJI3000x"><img class="tg" src="images/tg.svg"></a>
                 </div>
-                <a href="https://twitter.com/Kur0NekoCoin"><img class="twitter" src="images/twitter.svg"></a> 
+                <a href="https://twitter.com/JIJI20000X?t=09eu2BGtYRpJICVem1-QcA&s=09"><img class="twitter" src="images/twitter.svg"></a> 
             </div>
         </setion>
         </div>
@@ -240,9 +240,9 @@
                 <p class="community">Join Our Community</p>
                 <div class="media">
                     <div class="tg-container">
-                        <a href="https://t.me/kuroneko1000xxx"><img class="tg" src="images/tg.svg"></a>
+                        <a href="https://t.me/JIJI3000x"><img class="tg" src="images/tg.svg"></a>
                     </div>
-                    <a href="https://twitter.com/Kur0NekoCoin"><img class="twitter" src="images/twitter.svg"></a> 
+                    <a href="https://twitter.com/JIJI20000X?t=09eu2BGtYRpJICVem1-QcA&s=09"><img class="twitter" src="images/twitter.svg"></a> 
                 </div>
             </div> 
             <div class="support-p">
